--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
-  "homepage": https://github.com/NachoUrbanoBJJ/React.git
+  "homepage": "https://nachourbanobjj.github.io/React/"
 }
